Dpng 13370 backup readiness probe (#100)
* DPNG-13370 endpoint stable-state added

* DPNG-13370 UT added

* DPNG-13370 fix for nextState in swagger
